# curio

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Curio.md  README.md  openAPI.yaml
backend/: .env  .env.example  database.db  pyproject.toml  verify_grouping.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  groups.py  questions.py  sessions.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: __init__.py  group.py  question.py  session.py
backend/app/schemas/: __init__.py  group.py  question.py  session.py
backend/app/services/: __init__.py  ai_agent_service.py  embedding.py  grouping.py  question_service.py  session_service.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js  endpoints.js
frontend/src/components/: GroupedQuestionCard.jsx
frontend/src/components/ui/: badge.jsx  button.jsx
frontend/src/hooks/: useQuestions.js  useSession.js
frontend/src/pages/: LandingPage.jsx  StudentSession.jsx  TeacherDashboard.jsx  TeacherMonitor.jsx
